# samgis-be

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE.txt  Pipfile  README.md  SUPPLY_CHAIN_TODO.md  app.py  machine_learning_models  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_dev.txt  requirements_dockerfile.txt  requirements_failed.txt  requirements_no_versions.txt  requirements_poetry.txt  wrangler.toml
.claude/: settings.local.json.wl-backup
dockerfiles/: Dockerfile  dockerfile-base-webserver  dockerfile-fastapi-samgeo  dockerfile-lambda-fastsam-api  dockerfile-lambda-gdal-runner  dockerfile-lambda-samgeo-api  dockerfile-samgeo-api  dockerfile-samgis-base  dockerfile-samgis-base-alpinelinux3.23  dockerfile-samgis-base-with-lambda-support
docs/: Changelog.md  brief_project_presentation.md  conf.py  external_links.rst  external_links_md.md  index.rst  modules.rst  openapi.rst  other_resources.rst  sam2_onnx.rst  samgis.io.rst  samgis.prediction_api.rst  samgis.rst  samgis.utilities.rst  samgis_core.geo.rst  samgis_core.prediction_api.rst  samgis_core.rst  samgis_core.utilities.rst  samgis_web.io_package.rst  samgis_web.prediction_api.rst  samgis_web.rst  samgis_web.utilities.rst  samgis_web.web.rst  src.io.rst  src.prediction_api.rst  src.rst  src.utilities.rst
docs/specs/: openapi.yaml
events/: colico_point_rectangle_output.json  colico_prompt1.json  example_output.json  payload_multiprompt_api_request_body.json  payload_multiprompt_api_response_body_failure.json  payload_multiprompt_api_response_body_success.json  payload_point.json  payload_point2.json  payload_point_colico.json  payload_point_eolie.json  payload_point_error_int_str.json  payload_point_rectangle_colico.json  payload_rectangle.json  payloads_body_base64.json
samgis/: __init__.py  __version__.py
samgis/io/: __init__.py  coordinates_pixel_conversion.py  geo_helpers.py  lambda_helpers.py  raster_helpers.py  tms2geotiff.py  wrappers_helpers.py
samgis/prediction_api/: __init__.py  predictors.py  sam_onnx.py
samgis/utilities/: __init__.py  constants.py  fastapi_logger.py  serialize.py  type_hints.py  utilities.py
scripts/: client_health.py  copy_folder_to_host.sh  create_requirements.sh  download_models.py  extract-openapi-fastapi.py  extract-openapi-lambda.py  health.py  lambda-entrypoint.sh
src/: __init__.py  app.py  fastapi_wrapper.py  main.py
src/io/: coordinates_pixel_conversion.py  geo_helpers.py  helpers.py  lambda_helpers.py  lambda_wrapper.py  tiles_to_tiff.py  tms2geotiff.py
src/prediction_api/: predictor.py  predictors.py  sam_onnx.py  samgeo_predictors.py
src/utilities/: __init__.py  constants.py  measures.py  serialize.py  type_hints.py  utilities.py
static/: .env.example  .gitignore  CLAUDE.md  README.md  app.js  eslint.config.mjs  index.html  list_files.html  package.json  playwright.config.ts  pnpm-lock.yaml  script.js  stryker.config.json  tailwind.config.js  template.env  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
static/e2e/: colico-mocked-reponse.json  colico-request.json  fixtures.ts  samgis-be-docker-smoke.spec.ts  samgis-be-draw-on-map.spec.ts  samgis-be-driverjs.spec.ts  samgis-be-mocked.spec.ts  samgis-be.spec.ts
static/src/: App.vue  input.css  leaflet-custom.css
static/tests/: App.test.ts  ButtonComponent.test.ts  ButtonMapSendRequest.test.ts  MobileNavBar.test.ts  NavBar.test.ts  PageFooter.test.ts  PageFooterHyperlink.test.ts  PageLayout.test.ts  PagePredictionMap.test.ts  (+7 more)
tests/: __init__.py  local_tiles_http_server.py  test_app.py  test_client_health.py  test_download_models.py  test_fastapi_app.py  test_lambda_app.py  test_resolve_model_folder.py  utilities_testing.py
wrappers/: fastapi_wrapper.py  lambda_wrapper.py
(+75 files in other folders)
