[project]
name = "samgis"
version = "1.12.1"
description = "A backend for machine learning instance segmentation on geospatial data even without dedicated graphics cards."
authors = [{name = "alessandro trinca tornidor", email = "alessandro@trinca.tornidor.com"}]
license = "MIT license"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "samgis-web (==1.3.1)"
]

[tool.poetry]
package-mode = false

[tool.poetry.urls]
Source = "https://github.com/trincadev/samgis-be"
Demo = "https://huggingface.co/spaces/aletrn/samgis"

[tool.poetry.group.gradio]
optional = true

[tool.poetry.group.gradio.dependencies]
gradio = "^5.11.0"

# optional onnxruntime group to avoid fail during docker build
[tool.poetry.group.onnxruntime]
optional = true

[tool.poetry.group.onnxruntime.dependencies]
onnxruntime = ">=1.20.1,<2.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.27.2"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3,<8.2.0"
sphinx-autodoc-typehints = "^2.5.0"
sphinxcontrib-openapi = "^0.8.4"
myst-parser = "^4.0.0"
sphinx-autodoc-defaultargs = "^0.1.2"

[tool.pytest.ini_options]
addopts = " --cov=scripts --cov=app --cov-report html"

[build-system]
requires = ['poetry-core (>=2.0.0,<3.0.0)']
build-backend = "poetry.core.masonry.api"
