[project]
name = "samgis"
version = "1.12.2"
description = "A backend for machine learning instance segmentation on geospatial data even without dedicated graphics cards."
authors = [{name = "alessandro trinca tornidor", email = "alessandro@trinca.tornidor.com"}]
license = "MIT license"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "onnxruntime (>=1.23.2,<2.0.0)",
    "samgis-web (==1.3.4)"
]

[tool.poetry]
package-mode = false

[tool.poetry.urls]
Source = "https://github.com/trincadev/samgis-be"
Demo = "https://huggingface.co/spaces/aletrn/samgis"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.27.2"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^9.1.0"
sphinx-autodoc-typehints = "^3.6.2"
sphinxcontrib-openapi = "^0.8.4"
myst-parser = "^5.0.0"

[tool.pytest.ini_options]
addopts = " --cov=scripts --cov=app --cov-report html"

[build-system]
requires = ['poetry-core (>=2.0.0,<3.0.0)']
build-backend = "poetry.core.masonry.api"
