[project]
name = "samgis"
version = "1.12.3"
description = "A backend for machine learning instance segmentation on geospatial data even without dedicated graphics cards."
authors = [{name = "alessandro trinca tornidor", email = "alessandro@trinca.tornidor.com"}]
license = "MIT license"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "onnxruntime>=1.23.2,<2.0.0",
    "samgis-web==1.3.5",
]

[project.urls]
Source = "https://github.com/trincadev/samgis-be"
Demo = "https://huggingface.co/spaces/aletrn/samgis"

[dependency-groups]
test = [
    "httpx>=0.27.2,<1.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]
dev = [
    "pyright>=1.1.400",
]
docs = [
    "sphinx>=9.1.0,<10.0.0",
    "sphinx-autodoc-typehints>=3.6.2,<4.0.0",
    "sphinxcontrib-openapi>=0.8.4,<1.0.0",
    "myst-parser>=5.0.0,<6.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = " --cov=scripts --cov=app --cov-report html"
markers = ["integration: integration tests requiring external resources (models, network)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
